# os-release

./: .ybs.yml  ChangeLog.rst  Makefile  README.rst  os-release.cabal
tests/: HLint.hs  Haddock.hs
tests/Golden/data/: centos.golden  fedora.golden  opensuse.golden  opensuse.in  red-hat.golden  red-hat_parseErrors.golden
tests/acceptance/: OsReleaseSpec.hs
tests/acceptance/.config/OpenSUSE-13.1/: detect-os
tests/unit/: OsReleaseSpec.hs
tests/unit/OsReleaseSpec/: Reals.hs
