author:         Jan Matějka
build-type:     Simple
cabal-version:  >= 1.16
copyright:      2014 Jan Matějka <yac@blesmrt.net>
license:        BSD3
maintainer:     <yac@blesmrt.net>
name:           os-release
synopsis:       /etc/os-release helpers
version:        0.1.0

library
    build-depends:
      base
    default-language:   Haskell2010
    exposed-modules:    System.OsRelease
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:     library

test-suite tests
    build-depends:
        base
      , os-release
      , hspec
    default-language:
        Haskell2010
    ghc-options:
        -Wall
        -Werror
    hs-source-dirs:
        library
        tests
    main-is:
        Spec.hs
    other-modules:
        System.OsRelease
        OsReleaseSpec
    type:
        exitcode-stdio-1.0

test-suite documentation
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        tests
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        tests
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0
